// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text field Disabled renders correctly 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--m"
    disabled=""
    id="example-input-id-1"
    placeholder="Placeholder text"
    type="text"
  />
</jest>
`;

exports[`Text field Invalid renders correctly 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--invalid ecl-text-input--m"
    id="example-input-id-1"
    placeholder="Placeholder text"
    type="text"
  />
</jest>
`;

exports[`Text field Optional renders correctly 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    placeholder="Placeholder text"
    type="text"
  />
</jest>
`;

exports[`Text field Optional renders correctly with extra attributes 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-input-id-1"
    placeholder="Placeholder text"
    type="text"
  />
</jest>
`;

exports[`Text field Optional renders correctly with extra class names 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--m custom-class custom-class--test"
    id="example-input-id-1"
    placeholder="Placeholder text"
    type="text"
  />
</jest>
`;

exports[`Text field Optional renders correctly with extra group class names 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    placeholder="Placeholder text"
    type="text"
  />
</jest>
`;

exports[`Text field Optional renders correctly with extra label class names 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    placeholder="Placeholder text"
    type="text"
  />
</jest>
`;

exports[`Text field Required renders correctly 1`] = `
<jest>
  <input
    class="ecl-text-input ecl-text-input--m"
    id="example-input-id-1"
    placeholder="Placeholder text"
    required=""
    type="text"
  />
</jest>
`;
